--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark"> 
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
-    <link rel="icon" href="./images/favicon.ico" sizes="any">
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="./images/favicon.png">
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page">
-    <header class="header width-content">
+    <header class="header block">
       <a class="header__title"> &lt;/HTML&gt; </a>
       <h1 class="header__sub-title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
@@ -46,7 +46,7 @@
         </ul>
       </nav>
     </header>
-    <main class="content width-content">
+    <main class="content block">
       <ul class="card-items">
         <li class="card-item">
           <h2 class="card-itrm__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
